--- a/app/applications/applications.html
+++ b/app/applications/applications.html
@@ -4,6 +4,9 @@
 				<h2 class="text-center">
 					Active Job Applications
 				</h2>
+				<h3 class="text-center">
+					Latest job sorted by
+				</h3>
 			</div>
 <div ng-repeat="ad in ads">
 				<div class="panel panel-default">
