--- a/app/profile/profile.html
+++ b/app/profile/profile.html
@@ -9,7 +9,7 @@
 
     <div ng-hide="getValueTestStatus()" class="alert alert-danger alert-error">
     	<a href="javascript:void(0)" class="close" data-dismiss="alert">&times;</a>
-    	<strong>Hello!</strong> <a href="/#values">Please fill in the value test to get a recommended view of the applications (Click Here)</a>
+    	<strong>Hello!</strong> <a href="/#values">Please fill in the value test to get a recommended view of the applications</a>
 	</div>
 
 	<!-- User Information -->
@@ -22,7 +22,7 @@
 		<div class="panel-body">
 			<div class="row">
 				<div class="col-xs-4 col-sm-4">
-					<img class="profile-img" src="http://fc00.deviantart.net/fs71/f/2012/137/9/7/lilo_by_memechii-d505p0t.png" ></img>
+					<img class="profile-img" src="/img/logo_black.png" ></img>
 				</div>
 				<div class="col-xs-8 col-sm-8 text-left">
 					<div ng-repeat="info in userInfo" >
