--- a/app/register/register.html
+++ b/app/register/register.html
@@ -32,7 +32,7 @@
           <input type="number"
                  ng-model="phone"
                  class="form-control"
-                 placeholder="Phone">
+                 placeholder="Phone (070 - 000 00 00)">
         </div>
 
         <div class="form-group has-success has-feedback">
@@ -65,7 +65,7 @@
           <input type="number"
                  ng-model="personalNum"
                  class="form-control"
-                 placeholder="Personalnumber" required="">
+                 placeholder="Personalnumber (ÅÅÅÅMMDD-NNNN)" required="">
         </div>
 
         <div class="form-group">
