--- a/app/applications/applications.html
+++ b/app/applications/applications.html
@@ -1,104 +1,99 @@
 <div class="container">
 
-			<div>
-				<h2 class="text-center">
-					Active Job Applications
-				</h2>
-				<h3 class="text-center">
-					Latest job sorted by
-				</h3>
+	<div>
+		<h2 class="text-center">Active Job Applications</h2>
+		<h3 class="text-center">Your active job applications</h3>
+	</div>
+	<div ng-repeat="ad in ads">
+		<div class="panel panel-default">
+			<div class="panel-heading">
+				<h2 class="panel-title company_name"><b>
+		            {{ ad.company_name }} <!-- - {{ ad.company_match }} match -->
+		        </b></h2>
 			</div>
-<div ng-repeat="ad in ads">
-				<div class="panel panel-default">
-					<div class="panel-heading">
-						<h2 class="panel-title company_name"><b>
-				            {{ ad.company_name }} <!-- - {{ ad.company_match }} match -->
-				        </b></h2>
+			<div class="panel-body">
+				<div class="row">
+					<div class="col-xs-8 col-sm-8 text-left">
+						<div class="row">
+							<div class="col-sm-4 text-left"> Job title: </div>
+							<div class="col-sm-8 text-left"><b> {{ ad.job_header }} </b></div>
+						</div>
+						<div class="row">
+							<div class="col-sm-4 text-left"> Job position: </div>
+							<div class="col-sm-8 text-left"><b> {{ ad.job_title }} </b></div>
+						</div>
+						<div class="row">
+							<div class="col-sm-4 text-left"> Job city: </div>
+							<div class="col-sm-8 text-left"><b> {{ ad.job_city }} </b></div>
+						</div>
+						<div class="row">
+							<div class="col-sm-4 text-left"> Job posted: </div>
+							<div class="col-sm-8 text-left"><b> {{ ad.job_posted }} </b></div>
+						</div>
+ 					</div>
+					<div class="col-xs-4 col-sm-4 ">
+						<img class="img" src="{{ ad.company_logo }}" ></img>
 					</div>
-					<div class="panel-body">
-						<div class="row">
-							<div class="col-xs-8 col-sm-8 text-left">
-								<div class="row">
-									<div class="col-sm-4 text-left"> Job title: </div>
-									<div class="col-sm-8 text-left"><b> {{ ad.job_header }} </b></div>
-								</div>
-								<div class="row">
-									<div class="col-sm-4 text-left"> Job position: </div>
-									<div class="col-sm-8 text-left"><b> {{ ad.job_title }} </b></div>
-								</div>
-								<div class="row">
-									<div class="col-sm-4 text-left"> Job city: </div>
-									<div class="col-sm-8 text-left"><b> {{ ad.job_city }} </b></div>
-								</div>
-								<div class="row">
-									<div class="col-sm-4 text-left"> Job posted: </div>
-									<div class="col-sm-8 text-left"><b> {{ ad.job_posted }} </b></div>
-								</div>
-		 					</div>
-							<div class="col-xs-4 col-sm-4 ">
-								<img class="img" src="{{ ad.company_logo }}" ></img>
-							</div>
-						</div>
-						<div class="row">
-							<div class="text-center">
-								  <button class="btn btn-default btn-primary" ng-click="removeFromActiveApplications(ad.job_id)">Remove application</button>
-							</div>
-						</div>
+				</div>
+				<div class="row">
+					<div class="text-center">
+						  <button class="btn btn-default btn-primary" ng-click="removeFromActiveApplications(ad.job_id)">Remove application</button>
 					</div>
 				</div>
 			</div>
-			<!-- <div ng-repeat="ad in ads">
-				<div class="panel panel-default">
-					<div class="panel-heading">
-						<h2 class="panel-title company_name">
-							{{ ad.company_name }} - {{ ad.company_match }} match
-						</h2>
-					</div>
-					<div class="panel-body">
-						<div class="row">
-							<div class="col-xs-6 col-sm-8 text-left">
-								<div class="row">
-									<div class="col-sm-4 text-left"> Job title: </div>
-									<div class="col-sm-8 text-left"><b> {{ ad.job_title }} </b></div>
-								</div>
-								<div class="row">
-									<div class="col-sm-4 text-left"> Job hours: </div>
-									<div class="col-sm-8 text-left"><b> {{ ad.job_hours }} </b></div>
-								</div>
-								<div class="row">
-									<div class="col-sm-4 text-left"> Job city: </div>
-									<div class="col-sm-8 text-left"><b> {{ ad.job_city }} </b></div>
-								</div>
-								<div class="row">
-									<div class="col-sm-4 text-left"> Job starts: </div>
-									<div class="col-sm-8 text-left"><b> {{ ad.job_starts }} </b></div>
-								</div>
-								<div class="row">
-									<div class="col-sm-4 text-left"> Job ends: </div>
-									<div class="col-sm-8 text-left"><b> {{ ad.job_ends }} </b></div>
-								</div>
-								<div class="row">
-									<div class="col-sm-4 text-left"> Deadline to apply: </div>
-									<div class="col-sm-8 text-left"><b> {{ ad.job_deadline }} </b></div>
-								</div>
-							</div>
-							<div class="col-xs-6 col-sm-4 ">
-								<img class="img" src="{{ ad.company_logo }}" ></img>
-							</div>
-						</div>
-						<div class="row">
-							<div class="text-center"> Job status: <b>{{ ad.job_status }}</b></div>
-						</div>
-						<div class="row">
-							<div class="text-center">
-								<button class="btn btn-default btn-primary" ng-if="ad.job_status=='Accepted'" ng-click="continueWithApplication(ad.job_status)">Continue</button>
-							</div>
-							  <div class="text-center">
-              <button class="btn btn-default btn-primary" ng-click="removeFromActiveApplications('ad.job_id')">Remove application</button>
-            </div>-->
-						</div>
-					</div>
-				</div>
-			</div>
-	
 		</div>
+	</div>
+	<!-- <div ng-repeat="ad in ads">
+		<div class="panel panel-default">
+			<div class="panel-heading">
+				<h2 class="panel-title company_name">
+					{{ ad.company_name }} - {{ ad.company_match }} match
+				</h2>
+			</div>
+			<div class="panel-body">
+				<div class="row">
+					<div class="col-xs-6 col-sm-8 text-left">
+						<div class="row">
+							<div class="col-sm-4 text-left"> Job title: </div>
+							<div class="col-sm-8 text-left"><b> {{ ad.job_title }} </b></div>
+						</div>
+						<div class="row">
+							<div class="col-sm-4 text-left"> Job hours: </div>
+							<div class="col-sm-8 text-left"><b> {{ ad.job_hours }} </b></div>
+						</div>
+						<div class="row">
+							<div class="col-sm-4 text-left"> Job city: </div>
+							<div class="col-sm-8 text-left"><b> {{ ad.job_city }} </b></div>
+						</div>
+						<div class="row">
+							<div class="col-sm-4 text-left"> Job starts: </div>
+							<div class="col-sm-8 text-left"><b> {{ ad.job_starts }} </b></div>
+						</div>
+						<div class="row">
+							<div class="col-sm-4 text-left"> Job ends: </div>
+							<div class="col-sm-8 text-left"><b> {{ ad.job_ends }} </b></div>
+						</div>
+						<div class="row">
+							<div class="col-sm-4 text-left"> Deadline to apply: </div>
+							<div class="col-sm-8 text-left"><b> {{ ad.job_deadline }} </b></div>
+						</div>
+					</div>
+					<div class="col-xs-6 col-sm-4 ">
+						<img class="img" src="{{ ad.company_logo }}" ></img>
+					</div>
+				</div>
+				<div class="row">
+					<div class="text-center"> Job status: <b>{{ ad.job_status }}</b></div>
+				</div>
+				<div class="row">
+					<div class="text-center">
+						<button class="btn btn-default btn-primary" ng-if="ad.job_status=='Accepted'" ng-click="continueWithApplication(ad.job_status)">Continue</button>
+					</div>
+					  <div class="text-center">
+          <button class="btn btn-default btn-primary" ng-click="removeFromActiveApplications('ad.job_id')">Remove application</button>
+        </div>-->
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
