Fixed routing around removal of active applications and added a button at the end of the active applications list where the user can go back to the list of adds.

--- a/app/applications/applications.html
+++ b/app/applications/applications.html
@@ -68,7 +68,7 @@
         </div>
         <div class="row">
 					<div class="text-center">
-						<button class=" btn btn-default btn-danger" ng-ref="#/applications" ng-click="removeFromActiveApplications(ad.job_id)">Remove application</button>
+						<button class=" btn btn-default btn-danger" ng-click="removeFromActiveApplications(ad.job_id)">Remove application</button>
 					</div>
 					</br>
 					<div class="text-center">
@@ -78,4 +78,7 @@
       </div>
 		</div>
 	</div>
+  <div class="text-center">
+    <a class="btn btn-default btn-primary" ng-href="#/list">Apply for another job</a>
+  </div>
 </div>
