--- a/app/apply/apply.html
+++ b/app/apply/apply.html
@@ -76,13 +76,26 @@
             <h3 class="text-center">Required competences</h3>
             <div class="text-left">Please enter the level of your skills on these required competences:
             </div>
-            <div class="text-center" ng-repeat="competence in ad.job_competences ">
-              </br>
-              <div>
-                <b> {{ competence }} </b>
+            <div class="row">
+              <div class="col-xs-4" ng-repeat="competence in ad.job_competences ">
+                </br>
                 <div>
-                  <div class="btn-group" role="group">
-                    <button ng-repeat="i in ['Very bad','Bad','Good','Very good']" type="button" class="btn btn-default"> {{ i }} </button>
+                  <b> {{ competence }} </b>
+                  <div>
+                    <form role="form">
+                      <div class="radio">
+                        <label><input type="radio" name="optradio">Very good</label>
+                      </div>
+                      <div class="radio">
+                        <label><input type="radio" name="optradio">Good</label>
+                      </div>
+                      <div class="radio">
+                        <label><input type="radio" name="optradio">Bad</label>
+                      </div>
+                      <div class="radio">
+                      <label><input type="radio" class="btn btn-success" name="optradio">Very bad</label>
+                      </div>
+                    </form>
                   </div>
                 </div>
               </div>
