Changed the company logo on the apply and applications-page

--- a/app/apply/apply.html
+++ b/app/apply/apply.html
@@ -20,7 +20,7 @@
         <div class="panel-body">
           <!-- Company logo -->
           <div class="text-center">
-            <img class="img" src="data:image/png;base64,{{ad.company_logo}}" ></img>
+            <img class="img" ng-src="http://{{ad.company_logo}}" ></img>
           </div>
           <!-- Job information -->
           <h3 class="text-center">
