--- a/app/list-of-adds/list-of-adds.html
+++ b/app/list-of-adds/list-of-adds.html
@@ -42,7 +42,7 @@
 								</div>
 		 					</div>
 							<div class="col-xs-4 col-sm-4 ">
-								<img class="img" src="{{ ad.company_logo }}" ></img>
+								<img class="img" ng-src="{{ ad.company_logo }}" ></img>
 							</div>
 						</div>
 						<div class="row">
