Small fixes (Register input validation tip, Small bug in value test and changed name of button in list-of-adds

--- a/app/values/values.html
+++ b/app/values/values.html
@@ -64,7 +64,7 @@
             </a>
           </div>
           <div class="col-xs-6 list-group">
-            <a href ui-set="{'activeTab': 4}" class="list-group-item active">
+            <a href ui-set="{'activeTab': 4}" class="list-group-item blue">
               <h4>{{ values[1].value_name }}</h4>
               <span>{{ values[1].value_description}}</span>
             </a>
@@ -116,7 +116,7 @@
         <div class="row">
           <div class="col-xs-6 list-group">
             <a href ui-set="{'activeTab': 5}" class="list-group-item blue">
-              <h4 class="list-group-item-heading">{{ values[6].value_name }}</h4>
+              <h4>{{ values[6].value_name }}</h4>
               <span>{{ values[6].value_description}}</span>
             </a>
           </div>
