--- a/app/list-of-adds/list-of-adds.html
+++ b/app/list-of-adds/list-of-adds.html
@@ -47,7 +47,7 @@
 						</div>
 						<div class="row">
 							<div class="text-center">
-								<button class="btn btn-default btn-primary" ng-click="applyForJob(ad.job_id)">Apply for job</button>
+								<button class="btn btn-default btn-primary" ng-click="applyForJob(ad.job_id)">See more information</button>
 							</div>
 						</div>
 					</div>
