update view and controller working

--- a/app/index.html
+++ b/app/index.html
@@ -54,7 +54,7 @@ which module to associate the app with. In app.js we create the "dinnerPlanner" 
     <script src="applications/applications.js"></script>
     <script src="apply/apply.js"></script>
     <script src="values/values.js"></script>
-    
+    <script src="update/update.js"></script>
     
   </head>
     <body>
