Structure and naming change
Search is now fully functional
Structural changes
Available jobs switched login functionality
minor fixes.

--- a/app/active-job-applications/applications.html
+++ b/app/active-job-applications/applications.html
@@ -79,6 +79,6 @@
 		</div>
 	</div>
   <div class="text-center">
-    <a class="btn btn-default btn-primary" ng-href="#/list">Apply for another job</a>
+    <a class="btn btn-default btn-primary" ng-href="#/available-jobs">Apply for another job</a>
   </div>
 </div>
