--- a/app/apply/apply.html
+++ b/app/apply/apply.html
@@ -97,7 +97,7 @@
                </div>
             </br>
             <div class="text-center">
-              <button class="btn btn-default btn-primary" ng-click="addToActiveApplications(ad.job_id)">Send application</button>
+              <button class="btn btn-default btn-primary" ng-click="addToActiveApplications(ad.job_id)">Apply for job</button>
             </div>
           </div>
         </div>
