Renaming and structure : availableJobs

--- a/app/home/home.html
+++ b/app/home/home.html
@@ -6,7 +6,7 @@
         <p class="description">
           The simpliest and fastest way to find a job that matches you!
         </p>
-        <p><a href="#available-jobs" class="dl-btn btn-fill btn-stretch">Search Job Applications</a></p>            
+        <p><a href="#availableJobs" class="dl-btn btn-fill btn-stretch">Search Job Applications</a></p>            
         <p class="dl-btn-group">
           <a href="#register" class="dl-btn btn-stroke btn-left-stretch"><i class="fa fa-user-plus"></i>Register</a>
           <a href="#login" class="dl-btn btn-stroke btn-right-stretch"><i class="fa fa-check-square-o"></i>Login</a>
