--- a/app/index.html
+++ b/app/index.html
@@ -47,7 +47,7 @@ which module to associate the app with. In app.js we create the "dinnerPlanner" 
 
 
     <script src="login/login.js"></script>
-    <script src="available-jobs/available-jobs.js"></script>
+    <script src="availableJobs/availableJobs.js"></script>
     <script src="profile/profile.js"></script>
     <script src="home/home.js"></script>
     <script src="register/register.js"></script>
@@ -77,7 +77,7 @@ which module to associate the app with. In app.js we create the "dinnerPlanner" 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" collapse="navbarCollapsed">
       <ul class="nav navbar-nav">
         <li ng-class="getClass('/home')"><a href="/#home">Home <span class="sr-only">(current)</span></a></li>
-        <li ng-class="getClass('/available-jobs')"><a href="#/available-jobs">Available Jobs</a></li>
+        <li ng-class="getClass('/availableJobs')"><a href="#/availableJobs">Available Jobs</a></li>
         <li ng-class="getClass('/login')" ng-hide="isUserLoggedIn"><a  href="#/login">Login</a></li>
 
         <!--If user is logged in, show personal information-->
