--- a/app/update/updateView.html
+++ b/app/update/updateView.html
@@ -18,7 +18,7 @@
 
         <div class="form-group has-success has-feedback">
           <label>Phone</label>
-          <input type="number"
+          <input type="text"
                  ng-model="phone"
                  class="form-control"
                  placeholder="Phone (070 000 00 00)">
