Renaming and structure : Profile factory renamed to used, change applied to all .js files

--- a/app/profile/profileView.html
+++ b/app/profile/profileView.html
@@ -9,7 +9,7 @@
 
     <div ng-hide="getValueTestStatus()" class="alert alert-danger alert-error">
     	<a href="javascript:void(0)" class="close" data-dismiss="alert">&times;</a>
-    	<strong>Hello!</strong> <a href="/#values-test">Please fill in the value test to get a recommended view of the applications</a>
+    	<strong>Hello!</strong> <a href="/#valuesTest">Please fill in the value test to get a recommended view of the applications</a>
 	</div>
 
 	<!-- User Information -->
