--- a/app/index.html
+++ b/app/index.html
@@ -41,7 +41,7 @@ which module to associate the app with. In app.js we create the "dinnerPlanner" 
 
     <script src="components/auth/auth.js"></script>
     <script src="components/security/security.js"></script>
-    <script src="components/profile/profile.js"></script>
+    <script src="components/user/user.js"></script>
     <script src="components/applicationAPI/applicationAPI.js"></script>
     <script src="components/firebase.utils/firebase.utils.js"></script>
 
@@ -53,7 +53,7 @@ which module to associate the app with. In app.js we create the "dinnerPlanner" 
     <script src="register/register.js"></script>
     <script src="activeJobApplications/activeJobApplications.js"></script>
     <script src="apply/apply.js"></script>
-    <script src="values-test/values-test.js"></script>
+    <script src="valuesTest/valuesTest.js"></script>
     <script src="update/update.js"></script>
     
   </head>
