--- a/app/availableJobs/availableJobsView.html
+++ b/app/availableJobs/availableJobsView.html
@@ -1,73 +1,73 @@
-<div class="container">
+<div class="container" ng-init="latestJobs()">
 
-			<div>
-				<h2 class="text-center">
-					Available jobs
-				</h2>
-			</div>
+	<div>
+		<h2 class="text-center">
+			Available jobs
+		</h2>
+	</div>
 
-				
-		  <div class="search">
-		  	<input ng-change="search(query)" type="text" ng-model="query" id="jobFilter" class="form-control" name="Filter" placeholder="Search..">
 
-			</div>
-				<div class="text-center search">
-					Top 10 latest job sorted by {{date | date:'yyyy-MM-dd'}}
+	<div class="search">
+		<input ng-change="search(query)" type="text" ng-model="query" id="jobFilter" class="form-control" name="Filter" placeholder="Search..">
+
+	</div>
+	<div ng-hide="status" class="text-center search">
+		Top 10 latest job sorted by {{date | date:'yyyy-MM-dd'}}
+	</div>
+
+
+
+	<div class="main-container" layout="vertical" layout-fill>
+		<div class="text-center">
+			{{status}}
+		</div>
+
+
+		<div ng-repeat="ad in ads">
+
+			<div class="panel panel-default">
+				<div class="panel-heading">
+					<h2 class="panel-title company_name"><b>
+						{{ ad.company_name }} <!-- - {{ ad.company_match }} match -->
+					</b></h2>
 				</div>
-
-
-
-<div class="main-container" layout="vertical" layout-fill>
-						<div class="text-center">
-							{{status}}
+				<div class="panel-body">
+					<div class="row">
+						<div class="col-xs-8 col-sm-8 text-left">
+							<div class="row">
+								<div class="col-sm-4 text-left"> Job title: </div>
+								<div class="col-sm-8 text-left"><b> {{ ad.job_header }} </b></div>
+							</div>
+							<div class="row">
+								<div class="col-sm-4 text-left"> Job position: </div>
+								<div class="col-sm-8 text-left"><b> {{ ad.job_title }} </b></div>
+							</div>
+							<div class="row">
+								<div class="col-sm-4 text-left"> Job city: </div>
+								<div class="col-sm-8 text-left"><b> {{ ad.job_city }} </b></div>
+							</div>
+							<div class="row">
+								<div class="col-sm-4 text-left"> Job posted: </div>
+								<div class="col-sm-8 text-left"><b> {{ ad.job_posted }} </b></div>
+							</div>
 						</div>
-
-
-			<div ng-repeat="ad in ads | filter:query">
-
-				<div class="panel panel-default">
-					<div class="panel-heading">
-						<h2 class="panel-title company_name"><b>
-				            {{ ad.company_name }} <!-- - {{ ad.company_match }} match -->
-				        </b></h2>
+						<div class="col-xs-4 col-sm-4 ">
+							<img class="img" ng-src="{{ ad.company_logo }}" ></img>
+						</div>
 					</div>
-					<div class="panel-body">
-						<div class="row">
-							<div class="col-xs-8 col-sm-8 text-left">
-								<div class="row">
-									<div class="col-sm-4 text-left"> Job title: </div>
-									<div class="col-sm-8 text-left"><b> {{ ad.job_header }} </b></div>
-								</div>
-								<div class="row">
-									<div class="col-sm-4 text-left"> Job position: </div>
-									<div class="col-sm-8 text-left"><b> {{ ad.job_title }} </b></div>
-								</div>
-								<div class="row">
-									<div class="col-sm-4 text-left"> Job city: </div>
-									<div class="col-sm-8 text-left"><b> {{ ad.job_city }} </b></div>
-								</div>
-								<div class="row">
-									<div class="col-sm-4 text-left"> Job posted: </div>
-									<div class="col-sm-8 text-left"><b> {{ ad.job_posted }} </b></div>
-								</div>
-		 					</div>
-							<div class="col-xs-4 col-sm-4 ">
-								<img class="img" ng-src="{{ ad.company_logo }}" ></img>
-							</div>
-						</div>
-						<div class="row">
-							<div class="text-center">
-								<button class="btn btn-default btn-primary" ng-click="applyForJob(ad.job_id)">See more information</button>
-							</div>
+					<div class="row">
+						<div class="text-center">
+							<button class="btn btn-default btn-primary" ng-click="applyForJob(ad.job_id)">See more information</button>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
+	</div>
 </div>
 
-	<div ui-content-for="navbarAction">
-      <a class='btn' ng-click='logout()'>Logout</a>
-    </div>
-  </div>
+<div ui-content-for="navbarAction">
+	<a class='btn' ng-click='logout()'>Logout</a>
+</div>
+</div>
 
