--- a/app/index.html
+++ b/app/index.html
@@ -61,7 +61,7 @@ which module to associate the app with. In app.js we create the "dinnerPlanner" 
 
 
 
-<nav class="navbar navbar-default" ng-controller="MainNavCtrl">
+<nav class="navbar navbar-inverse" ng-controller="MainNavCtrl">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
